deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: aaasportsbet
  name: aaasportsbet-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: aaasportsbet-ip
  labels:
    app: frontend
spec:
  tls:
  - hosts:
    - bet.aaasports.io
    secretName: aaasports-io-tls
  rules:
  - host: testnet.aaasports.io
    http:
      paths:
      - backend:
          serviceName: frontend-testnet-service
          servicePort: 80
  - host: mainnet.aaasports.io
    http:
      paths:
      - backend:
          serviceName: frontend-mainnet-service
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: aaasportsbet
  name: aaasportsbet-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: aaasportsbet-ip
  labels:
    app: frontend
    environment: mainnet
spec:
  rules:
  - host: bet.aaasports.io
    http:
      paths:
      - backend:
          serviceName: frontend-mainnet-service
          servicePort: 80
